check latex fix

--- a/notebooks/electricity_markets.ipynb
+++ b/notebooks/electricity_markets.ipynb
@@ -45,19 +45,16 @@
     "\n",
     "The minimization problem can be expressed as \n",
     "\n",
+    "\\[\n",
     "\\begin{aligned}\n",
-    "&\\begin{aligned}\n",
-    "& \\min _{p, u} 500 \\cdot u_1+1000 \\cdot u_2+10 \\cdot p_2+2000 \\cdot u_3+80 \\cdot p_3 \\\\\n",
-    "& \\text { s.t. } 0 \\leq p_1 \\leq 20 \\cdot u_1 \\\\\n",
-    "& 0 \\leq p_2 \\leq 100 \\cdot u_2 \\\\\n",
-    "& 0 \\leq p_3 \\leq 100 \\cdot u_3\n",
-    "\\end{aligned}\\\\\n",
-    "&\\text { ( } \\lambda \\text { ): }\\\\\n",
-    "&\\begin{aligned}\n",
-    "& p_1+p_2+p_3=200 \\\\\n",
-    "& u_i \\in\\{0,1\\} .\n",
+    "& \\min_{p,u}\\; 500u_1 + 1000u_2 + 10p_2 + 2000u_3 + 80p_3 \\\\\n",
+    "& \\text{s.t.}\\; 0 \\le p_1 \\le 20u_1 \\\\\n",
+    "& \\phantom{\\text{s.t.}}\\; 0 \\le p_2 \\le 100u_2 \\\\\n",
+    "& \\phantom{\\text{s.t.}}\\; 0 \\le p_3 \\le 100u_3 \\\\\n",
+    "& \\lambda:\\; p_1 + p_2 + p_3 = 200 \\\\\n",
+    "& u_i \\in \\{0,1\\}\n",
     "\\end{aligned}\n",
-    "\\end{aligned}"
+    "\\]"
    ]
   },
   {
