--- a/notebooks/electricity_markets.ipynb
+++ b/notebooks/electricity_markets.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "aec8cbaa",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,23 @@
     "import numpy as np\n",
     "import polars as pl\n",
     "import jax.numpy as jnp\n",
-    "import pyomo.environ as pyo"
+    "import pyomo.environ as pyo\n",
+    "import importlib\n",
+    "import src  \n",
+    "import pathlib\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "518d9480",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "importlib.reload(src)\n",
+    "\n",
+    "from src import GeneratorCommitment"
    ]
   },
   {
@@ -59,13 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "1d0b5103",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create or instantiate the model object\n",
     "model = pyo.ConcreteModel()\n",
+    "\n",
+    "# we want to see the lagrangian values\n",
+    "model.dual = pyo.Suffix(direction=pyo.Suffix.IMPORT_EXPORT)\n",
     "\n",
     "# define the model types: Binary variables\n",
     "model.u1 = pyo.Var(domain=pyo.Binary)\n",
@@ -103,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "dfe00d24",
    "metadata": {},
    "outputs": [
@@ -142,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "acfd4430",
    "metadata": {},
    "outputs": [
@@ -150,6 +169,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.12 \n",
+      "Build Date: Aug  2 2025 \n",
+      "\n",
+      "command line - C:\\Users\\Gurjivan\\miniforge3\\envs\\opt_env\\Library\\bin\\cbc.exe -printingOptions all -import C:\\Users\\Gurjivan\\AppData\\Local\\Temp\\tmpb76s9to2.pyomo.lp -stat=1 -solve -solu C:\\Users\\Gurjivan\\AppData\\Local\\Temp\\tmpb76s9to2.pyomo.soln (default strategy 1)\n",
+      "Option for printingOptions changed from normal to all\n",
+      "Presolve 4 (0) rows, 6 (0) columns and 9 (0) elements\n",
+      "Statistics for presolved model\n",
+      "Original problem has 3 integers (3 of which binary)\n",
+      "==== 1 zero objective 6 different\n",
+      "1 variables have objective of 0\n",
+      "1 variables have objective of 10\n",
+      "1 variables have objective of 80\n",
+      "1 variables have objective of 500\n",
+      "1 variables have objective of 1000\n",
+      "1 variables have objective of 2000\n",
+      "==== absolute objective values 6 different\n",
+      "1 variables have objective of 0\n",
+      "1 variables have objective of 10\n",
+      "1 variables have objective of 80\n",
+      "1 variables have objective of 500\n",
+      "1 variables have objective of 1000\n",
+      "1 variables have objective of 2000\n",
+      "==== for integers 0 zero objective 3 different\n",
+      "1 variables have objective of 500\n",
+      "1 variables have objective of 1000\n",
+      "1 variables have objective of 2000\n",
+      "==== for integers absolute objective values 3 different\n",
+      "1 variables have objective of 500\n",
+      "1 variables have objective of 1000\n",
+      "1 variables have objective of 2000\n",
+      "===== end objective counts\n",
+      "\n",
+      "\n",
+      "Problem has 4 rows, 6 columns (5 with objective) and 9 elements\n",
+      "There are 3 singletons with objective \n",
+      "Column breakdown:\n",
+      "3 of type 0.0->inf, 0 of type 0.0->up, 0 of type lo->inf, \n",
+      "0 of type lo->up, 0 of type free, 0 of type fixed, \n",
+      "0 of type -inf->0.0, 0 of type -inf->up, 3 of type 0.0->1.0 \n",
+      "Row breakdown:\n",
+      "0 of type E 0.0, 0 of type E 1.0, 0 of type E -1.0, \n",
+      "1 of type E other, 0 of type G 0.0, 0 of type G 1.0, \n",
+      "0 of type G other, 3 of type L 0.0, 0 of type L 1.0, \n",
+      "0 of type L other, 0 of type Range 0.0->1.0, 0 of type Range other, \n",
+      "0 of type Free \n",
+      "Continuous objective value is 10500 - 0.00 seconds\n",
+      "Cgl0004I processed model has 1 rows, 3 columns (1 integer (1 of which binary)) and 3 elements\n",
+      "Cbc0038I Initial state - 0 integers unsatisfied sum - 0\n",
+      "Cbc0038I Solution found of 10900\n",
+      "Cbc0038I Relaxing continuous gives 10900\n",
+      "Cbc0038I Before mini branch and bound, 1 integers at bound fixed and 1 continuous\n",
+      "Cbc0038I Mini branch and bound did not improve solution (0.10 seconds)\n",
+      "Cbc0038I After 0.10 seconds - Feasibility pump exiting with objective of 10900 - took 0.00 seconds\n",
+      "Cbc0012I Integer solution of 10900 found by feasibility pump after 0 iterations and 0 nodes (0.10 seconds)\n",
+      "Cbc0001I Search completed - best objective 10900, took 0 iterations and 0 nodes (0.10 seconds)\n",
+      "Cbc0035I Maximum depth 0, 0 variables fixed on reduced cost\n",
+      "Cuts at root node changed objective from 10900 to 10900\n",
+      "Probing was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Gomory was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Knapsack was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Clique was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "MixedIntegerRounding2 was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "FlowCover was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "TwoMirCuts was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "ZeroHalf was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "\n",
+      "Result - Optimal solution found\n",
+      "\n",
+      "Objective value:                10900.00000000\n",
+      "Enumerated nodes:               0\n",
+      "Total iterations:               0\n",
+      "Time (CPU seconds):             0.10\n",
+      "Time (Wallclock seconds):       0.10\n",
+      "\n",
+      "Total time (CPU seconds):       0.11   (Wallclock seconds):       0.11\n",
+      "\n",
       "\n",
       "Problem: \n",
       "- Name: unknown\n",
@@ -165,8 +261,8 @@
       "Solver: \n",
       "- Status: ok\n",
       "  User time: -1.0\n",
-      "  System time: 0.01\n",
-      "  Wallclock time: 0.01\n",
+      "  System time: 0.11\n",
+      "  Wallclock time: 0.11\n",
       "  Termination condition: optimal\n",
       "  Termination message: Model was solved to optimality (subject to tolerances), and an optimal solution is available.\n",
       "  Statistics: \n",
@@ -176,7 +272,7 @@
       "    Black box: \n",
       "      Number of iterations: 0\n",
       "  Error rc: 0\n",
-      "  Time: 0.043439626693725586\n",
+      "  Time: 0.32871556282043457\n",
       "Solution: \n",
       "- number of solutions: 0\n",
       "  number of solutions displayed: 0\n",
@@ -186,14 +282,14 @@
    ],
    "source": [
     "solver = pyo.SolverFactory('cbc')\n",
-    "result = solver.solve(model)\n",
+    "result = solver.solve(model, tee=True)\n",
     "\n",
     "print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "8a7e8bcf",
    "metadata": {},
    "outputs": [
@@ -217,11 +313,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df705469",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for c in model.component_objects(pyo.Constraint, active=True):\n",
+    "    for idx in c:\n",
+    "        print(c[idx], model.dual[c[idx]])\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4126364f",
    "metadata": {},
    "source": [
-    "We got an ideal result here but in terms of longevity we have issues since what if we want to run this for multiple generators, more constraints, but the same objective function in general. This is why while the above format is technically valid it is more ideal to run this in a more functional form. "
+    "In this case scenario it means that by relaxing generator 1 max constrain by 1 MW would raise cost by $80. \n",
+    "\n",
+    "We got an ideal result here but in terms of longevity we have issues since what if we want to run this for multiple generators, more constraints, but the same objective function in general, we will be copy and pasting this exact code alot. This is why while the above format is technically valid it is more ideal to run this in a more functional form. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "076cae86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================================================\n",
+      "GENERATOR COMMITMENT\n",
+      "============================================================\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Problem: \n",
+      "- Name: unknown\n",
+      "  Lower bound: 10900.0\n",
+      "  Upper bound: 10900.0\n",
+      "  Number of objectives: 1\n",
+      "  Number of constraints: 4\n",
+      "  Number of variables: 6\n",
+      "  Number of binary variables: 3\n",
+      "  Number of integer variables: 3\n",
+      "  Number of nonzeros: 5\n",
+      "  Sense: minimize\n",
+      "Solver: \n",
+      "- Status: ok\n",
+      "  User time: -1.0\n",
+      "  System time: 0.02\n",
+      "  Wallclock time: 0.02\n",
+      "  Termination condition: optimal\n",
+      "  Termination message: Model was solved to optimality (subject to tolerances), and an optimal solution is available.\n",
+      "  Statistics: \n",
+      "    Branch and bound: \n",
+      "      Number of bounded subproblems: 0\n",
+      "      Number of created subproblems: 0\n",
+      "    Black box: \n",
+      "      Number of iterations: 0\n",
+      "  Error rc: 0\n",
+      "  Time: 0.05445718765258789\n",
+      "Solution: \n",
+      "- number of solutions: 0\n",
+      "  number of solutions displayed: 0\n",
+      "\n",
+      "\n",
+      "Total Cost: $10,900.00\n",
+      "\n",
+      "Generator Status:\n",
+      "  Gen1: on=1, power=20.0/20 MW\n",
+      "  Gen2: on=1, power=100.0/100 MW\n",
+      "  Gen3: on=1, power=80.0/100 MW\n",
+      "\n",
+      "Constraint Duals (Shadow Prices):\n",
+      "  capacity_constraint[Gen1] = -80.0\n",
+      "  capacity_constraint[Gen2] = -70.0\n",
+      "  capacity_constraint[Gen3] = 0.0\n",
+      "  demand_constraint[None] = 80.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"=\"*60)\n",
+    "print(\"GENERATOR COMMITMENT\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "generators = ['Gen1', 'Gen2', 'Gen3']\n",
+    "gen_data = {\n",
+    "    'Gen1': {'fixed_cost': 500, 'var_cost': 0, 'capacity': 20},\n",
+    "    'Gen2': {'fixed_cost': 1000, 'var_cost': 10, 'capacity': 100},\n",
+    "    'Gen3': {'fixed_cost': 2000, 'var_cost': 80, 'capacity': 100},\n",
+    "}\n",
+    "\n",
+    "uc = GeneratorCommitment(generators, gen_data, demand=200)\n",
+    "uc.build().solve(tee=False)\n",
+    "uc.print_results()"
    ]
   }
  ],
