--- a/notebooks/Electricity Markets Optimization.ipynb
+++ b/notebooks/Electricity Markets Optimization.ipynb
@@ -12,32 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "aec8cbaa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the necessary libraries\n",
-    "import numpy as np\n",
-    "import polars as pl\n",
-    "import jax.numpy as jnp\n",
     "import pyomo.environ as pyo\n",
-    "import importlib\n",
-    "import src  \n",
-    "import pathlib\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "518d9480",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
-    "importlib.reload(src)\n",
-    "\n",
-    "from src import GeneratorCommitment"
+    "from src import GeneratorCommitment\n"
    ]
   },
   {
@@ -75,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "1d0b5103",
    "metadata": {},
    "outputs": [],
@@ -122,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "dfe00d24",
    "metadata": {},
    "outputs": [
@@ -161,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "acfd4430",
    "metadata": {},
    "outputs": [
@@ -173,7 +156,7 @@
       "Version: 2.10.12 \n",
       "Build Date: Aug  2 2025 \n",
       "\n",
-      "command line - C:\\Users\\Gurjivan\\miniforge3\\envs\\opt_env\\Library\\bin\\cbc.exe -printingOptions all -import C:\\Users\\Gurjivan\\AppData\\Local\\Temp\\tmpb76s9to2.pyomo.lp -stat=1 -solve -solu C:\\Users\\Gurjivan\\AppData\\Local\\Temp\\tmpb76s9to2.pyomo.soln (default strategy 1)\n",
+      "command line - C:\\Users\\Gurjivan\\miniforge3\\envs\\opt_env\\Library\\bin\\cbc.exe -printingOptions all -import C:\\Users\\Gurjivan\\AppData\\Local\\Temp\\tmp6pxv8fs6.pyomo.lp -stat=1 -solve -solu C:\\Users\\Gurjivan\\AppData\\Local\\Temp\\tmp6pxv8fs6.pyomo.soln (default strategy 1)\n",
       "Option for printingOptions changed from normal to all\n",
       "Presolve 4 (0) rows, 6 (0) columns and 9 (0) elements\n",
       "Statistics for presolved model\n",
@@ -221,10 +204,10 @@
       "Cbc0038I Solution found of 10900\n",
       "Cbc0038I Relaxing continuous gives 10900\n",
       "Cbc0038I Before mini branch and bound, 1 integers at bound fixed and 1 continuous\n",
-      "Cbc0038I Mini branch and bound did not improve solution (0.10 seconds)\n",
-      "Cbc0038I After 0.10 seconds - Feasibility pump exiting with objective of 10900 - took 0.00 seconds\n",
-      "Cbc0012I Integer solution of 10900 found by feasibility pump after 0 iterations and 0 nodes (0.10 seconds)\n",
-      "Cbc0001I Search completed - best objective 10900, took 0 iterations and 0 nodes (0.10 seconds)\n",
+      "Cbc0038I Mini branch and bound did not improve solution (0.21 seconds)\n",
+      "Cbc0038I After 0.21 seconds - Feasibility pump exiting with objective of 10900 - took 0.00 seconds\n",
+      "Cbc0012I Integer solution of 10900 found by feasibility pump after 0 iterations and 0 nodes (0.21 seconds)\n",
+      "Cbc0001I Search completed - best objective 10900, took 0 iterations and 0 nodes (0.21 seconds)\n",
       "Cbc0035I Maximum depth 0, 0 variables fixed on reduced cost\n",
       "Cuts at root node changed objective from 10900 to 10900\n",
       "Probing was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
@@ -241,10 +224,10 @@
       "Objective value:                10900.00000000\n",
       "Enumerated nodes:               0\n",
       "Total iterations:               0\n",
-      "Time (CPU seconds):             0.10\n",
-      "Time (Wallclock seconds):       0.10\n",
+      "Time (CPU seconds):             0.21\n",
+      "Time (Wallclock seconds):       0.21\n",
       "\n",
-      "Total time (CPU seconds):       0.11   (Wallclock seconds):       0.11\n",
+      "Total time (CPU seconds):       0.22   (Wallclock seconds):       0.22\n",
       "\n",
       "\n",
       "Problem: \n",
@@ -261,8 +244,8 @@
       "Solver: \n",
       "- Status: ok\n",
       "  User time: -1.0\n",
-      "  System time: 0.11\n",
-      "  Wallclock time: 0.11\n",
+      "  System time: 0.22\n",
+      "  Wallclock time: 0.22\n",
       "  Termination condition: optimal\n",
       "  Termination message: Model was solved to optimality (subject to tolerances), and an optimal solution is available.\n",
       "  Statistics: \n",
@@ -272,7 +255,7 @@
       "    Black box: \n",
       "      Number of iterations: 0\n",
       "  Error rc: 0\n",
-      "  Time: 0.32871556282043457\n",
+      "  Time: 0.4359011650085449\n",
       "Solution: \n",
       "- number of solutions: 0\n",
       "  number of solutions displayed: 0\n",
@@ -289,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "8a7e8bcf",
    "metadata": {},
    "outputs": [
@@ -314,10 +297,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "df705469",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "capacity_u1 -80.0\n",
+      "capacity_u2 -70.0\n",
+      "capacity_u3 0.0\n",
+      "demand_balance 80.0\n"
+     ]
+    }
+   ],
    "source": [
     "for c in model.component_objects(pyo.Constraint, active=True):\n",
     "    for idx in c:\n",
@@ -336,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "076cae86",
    "metadata": {},
    "outputs": [
@@ -346,13 +340,7 @@
      "text": [
       "============================================================\n",
       "GENERATOR COMMITMENT\n",
-      "============================================================\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "============================================================\n",
       "\n",
       "Problem: \n",
       "- Name: unknown\n",
@@ -379,7 +367,7 @@
       "    Black box: \n",
       "      Number of iterations: 0\n",
       "  Error rc: 0\n",
-      "  Time: 0.05445718765258789\n",
+      "  Time: 0.05351543426513672\n",
       "Solution: \n",
       "- number of solutions: 0\n",
       "  number of solutions displayed: 0\n",
