--- a/notebooks/Non Linear Optimization.ipynb
+++ b/notebooks/Non Linear Optimization.ipynb
@@ -550,7 +550,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gurjivan_default",
+   "display_name": "opt_env",
    "language": "python",
    "name": "python3"
   },
@@ -564,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
